--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body> 
 <img class="profile-img" src="/Mbongeni Tshabalala .jpg" alt="" />
   <h1>Mbongeni Tshabalala</h1>
-  <p>I am a coding student <a href="http://www.zaio.io/" target="_blank">@Zaio.io</a> coding school learninghow to code so that i can enhance my skills and maybe someday work and contribute to the tech world.</p>
+  <p>I am a coding student <a href="http://www.zaio.io/" target="_blank">@Zaio.io</a> coding school learninghow to code so that i can enhance my skills and maybe someday work and contribute to the tech world. I am an aspiring software engineer</p>
   
   
     <div>
